--- a/app/views/error.ejs
+++ b/app/views/error.ejs
@@ -1,7 +1,7 @@
-<% include header %>
+<%- include('header', {css:""}) %>
 
   <%- message %>
   <%- error.status %>
   <%- error.stack %>
-  
+
 <% include footer %>
