--- a/app/views/auth.ejs
+++ b/app/views/auth.ejs
@@ -1,5 +1,4 @@
-<% include header %>
-
+<%- include('header', {css:""}) %>
 
 <core-header-panel flex>
 
@@ -9,23 +8,23 @@
 
     <form name="loginForm">
 
-      <paper-input-decorator 
-        label="username" 
-        floatingLabel 
-        error="{{errorMessage(loginForm.username.$error)}}" 
+      <paper-input-decorator
+        label="username"
+        floatingLabel
+        error="{{errorMessage(loginForm.username.$error)}}"
         isInvalid="{{!loginForm.username.$valid && loginForm.username.$dirty}}"
       >
         <input name="username" is="paper-input"
-          required 
-          ng-model="formData.username" 
-          ng-maxlength="10" 
+          required
+          ng-model="formData.username"
+          ng-maxlength="10"
           ng-minlength="4"
           ng-keydown="hideGlobalValidation()"
         >
       </paper-input-decorator>
 
-      <paper-input-decorator 
-        label="password" 
+      <paper-input-decorator
+        label="password"
         floatingLabel
         error="{{errorMessage(loginForm.password.$error)}}"
         isInvalid="{{!loginForm.password.$valid && loginForm.password.$dirty}}"
@@ -39,9 +38,9 @@
         >
       </paper-input-decorator>
 
-      
-      <paper-shadow 
-        class="global-validator" 
+
+      <paper-shadow
+        class="global-validator"
         z="1"
         ng-cloak
         ng-show="formData.valid.global"
@@ -60,7 +59,7 @@
         class="findpassword primary">
         Forgot password?
       </paper-button>
-      
+
     </form>
   </div>
 </core-header-panel>
