--- a/public/less/common.less
+++ b/public/less/common.less
@@ -14,6 +14,10 @@ paper-button:hover{
 	background-color:@dividerLightColor;
 }
 
+paper-button.primary {
+	color: @accentColor;
+}
+
 // buttons
 paper-button[raised] {
   background-color: #fff;
@@ -138,6 +142,14 @@ paper-action-dialog {
 	paper-button[autofocus] {
 		color: @primaryColor;
 	}
+
+	paper-button[autofocus].primary {
+		color: @accentColor;
+	}
+}
+
+html paper-action-dialog /deep/ h1 {
+	color:@primaryColor;
 }
 
 FORM radio-group legend {
