setting 스키마 변경

--- a/app/views/admin_setting.ejs
+++ b/app/views/admin_setting.ejs
@@ -133,7 +133,7 @@
       </paper-input-decorator>
     </form>
 
-    <paper-button class="primary" affirmative autofocus>OK</paper-button>
+    <paper-button class="primary" affirmative>OK</paper-button>
     <paper-button affirmative>CLOSE</paper-button>
 
   </paper-action-dialog>
