--- a/app/views/auth.ejs
+++ b/app/views/auth.ejs
@@ -56,7 +56,7 @@
       </paper-button>
 
       <paper-button
-        class="findpassword primary">
+        class="findpassword">
         Forgot password?
       </paper-button>
 
