profile photo dialog 작성중

--- a/app/views/admin_setting.ejs
+++ b/app/views/admin_setting.ejs
@@ -115,7 +115,7 @@
 
 
   <paper-action-dialog backdrop autoCloseDisabled layered="true"
-    id="content-invalid"
+    id="profile-photo-dialog"
     heading="Profile Photo"
     ng-cloak
     ng-controller="AdminSettingDialog"
