--- a/public/less/common.less
+++ b/public/less/common.less
@@ -130,6 +130,11 @@ paper-shadow.global-validator {
   }
 }
 
+/** toast **/
+paper-toast {
+  
+}
+
 /** dialog **/
 paper-action-dialog {
 	width    : 50%;
