--- a/public/less/common.less
+++ b/public/less/common.less
@@ -130,6 +130,27 @@ paper-shadow.global-validator {
   }
 }
 
+/** form - alert **/
+paper-shadow.form-alert {
+  display         : inline-block;
+  background-color: @dividerLightColor;
+  box-sizing      : border-box;
+  margin-bottom   : 0px;
+  margin-top      : 20px;
+  padding         : 10px;
+  border-radius   : 2px;
+  width           : 100%;
+  color           : @primaryText;
+  font-size       : 13px;
+
+  core-icon {
+    margin-right:5px;
+    font-size   :12px;
+    height      :18px;
+    width       :18px;
+  }
+}
+
 /** toast **/
 paper-toast {
   
