--- a/app/views/blog_topbar.ejs
+++ b/app/views/blog_topbar.ejs
@@ -1,4 +1,4 @@
 <core-toolbar id="blog-mainheader">
-	<span flex>My Blog Name</span>
+	<span flex><%-blogName %></span>
 	<paper-icon-button icon="info-outline"></paper-icon-button>
 </core-toolbar>
