--- a/app/views/blog.ejs
+++ b/app/views/blog.ejs
@@ -14,7 +14,8 @@
 
           <p class="date-and-autor">
             <core-icon icon="today"></core-icon>&nbsp;
-            <%= posts[i]["publish_date"] %>
+            <%= posts[i]["publish_date"] %>&nbsp;
+            Posted by User 
           </p>
 
           <p>
