--- a/public/less/blog/style.less
+++ b/public/less/blog/style.less
@@ -7,6 +7,15 @@ body {
 core-toolbar#blog-mainheader {
   background-color: @primaryColor;
   color           : @textNicon;
+
+	.home-button {
+		color: #FFF!important;
+
+		&:active, &:hover, &:focus {
+			color          : #FFF!important;
+			text-decoration: none!important;
+		}
+	}
 }
 
 paper-shadow.content-box {
