social plugin 추가

--- a/app/views/auth.ejs
+++ b/app/views/auth.ejs
@@ -55,10 +55,10 @@
         Login
       </paper-button>
 
-      <paper-button
+      <!--<paper-button
         class="findpassword">
         Forgot password?
-      </paper-button>
+      </paper-button>-->
 
     </form>
   </div>
