--- a/public/less/blog/read_post.less
+++ b/public/less/blog/read_post.less
@@ -22,3 +22,22 @@
   }
 
 }
+
+paper-dropdown#social-share {
+  position    : absolute!important;
+  top         : 0px!important;
+  left        : 90px!important;
+  min-width   : 105px!important;
+  min-height  : 5px!important;
+  height      : 34px!important;
+  padding-top : 7px!important;
+  padding-left: 15px!important;
+
+	.soc {
+	  text-align: left!important;
+
+		.soc-twitter { text-transform: lowercase; }
+		.soc-facebook { text-transform: lowercase; }
+		.soc-google { text-transform: lowercase; }
+	}
+}
