--- a/public/less/common.less
+++ b/public/less/common.less
@@ -5,7 +5,7 @@ body {
 }
 
 a {
-	color: @accentColor!important;
+	color: @accentColor;
 }
 
 /** polymer ui customize **/
@@ -153,7 +153,7 @@ paper-shadow.form-alert {
 
 /** toast **/
 paper-toast {
-  
+
 }
 
 /** dialog **/
