사용자 정보변경 다이얼로그 추가

--- a/app/views/admin_manage_post.ejs
+++ b/app/views/admin_manage_post.ejs
@@ -67,7 +67,10 @@
 	    </div>
 
   </div>
+</div>
 </core-header-panel>
+
+<%- include('admin_footbar') %>
 
 <script src="/components/requirejs/require.js" data-main="/js/admin_manage_post.js"></script>
 
