--- a/app/views/admin_new_post.ejs
+++ b/app/views/admin_new_post.ejs
@@ -77,7 +77,6 @@
 
   </div>
 
-  </div>
 </core-header-panel>
 
 <div ng-controller="AdminNewPostDialog">
@@ -90,6 +89,7 @@
   </paper-action-dialog>
 </div>
 
+<%- include('admin_footbar') %>
 
 <script src="/components/requirejs/require.js" data-main="/js/admin_new_post.js"></script>
 
