--- a/app/views/admin_setting.ejs
+++ b/app/views/admin_setting.ejs
@@ -185,8 +185,7 @@
 
 </div>
 
-
-
+<%- include('admin_footbar') %>
 
 <script src="/components/requirejs/require.js" data-main="/js/admin_setting.js"></script>
 
