--- a/app/views/admin_footbar.ejs
+++ b/app/views/admin_footbar.ejs
@@ -2,21 +2,85 @@
 
   <paper-action-dialog backdrop autoCloseDisabled layered="false"
     id="admin-user-setting-dialog"
-    heading="User Information"
+    heading="Account Setting"
     closeSelector="[force-close]"
     ng-cloak
   >
     <form name="profilePhotoForm">
       <paper-input-decorator
-        label="Photo Url"
-        error="{{errorMessage(profilePhotoForm.photoUrl.$error)}}"
-        isInvalid="{{!profilePhotoForm.photoUrl.$valid && profilePhotoForm.photoUrl.$dirty}}"
+        label="Username"
+        floatingLabel
       >
         <input name="photoUrl" is="paper-input"
           type="url"
-          ng-model="formData.photoUrl"
+          value="admin"
+          readonly
         >
       </paper-input-decorator>
+
+      <paper-input-decorator
+        label="Email"
+        floatingLabel
+      >
+        <input name="photoUrl" is="paper-input"
+          type="url"
+          value="admin@admin.com"
+          readonly
+        >
+      </paper-input-decorator>
+
+      <fieldset style="margin-top:55px;">
+
+      <legend style="font-size:16px;margin-bottom:0px;">
+
+        <div style="float:left;line-height:35px">Change Password</div>
+        &nbsp;&nbsp;
+        <paper-button class="primary" role="button" tabindex="0" style="font-size:12px;position:absolute;right:30px;">
+          <core-icon icon="check" style="width:14px;height:14px;"></core-icon>&nbsp;SAVE
+        </paper-button>
+      </legend>
+
+     <div style="float:left;width:100%;">
+
+      <paper-input-decorator
+        label="Old Password"
+
+      >
+        <input name="photoUrl" is="paper-input"
+          type="password"
+          value="admin@admin.com"
+
+        >
+      </paper-input-decorator>
+
+      <paper-input-decorator
+        label="New Password"
+
+      >
+        <input name="photoUrl" is="paper-input"
+          type="password"
+          value="admin@admin.com"
+
+        >
+      </paper-input-decorator>
+
+      <paper-input-decorator
+        label="Confirm Password"
+
+      >
+        <input name="photoUrl" is="paper-input"
+          type="password"
+          value="admin@admin.com"
+
+        >
+      </paper-input-decorator>
+    </div>
+
+
+
+    </fieldset>
+
+
     </form>
 
     <paper-button force-close affirmative>close</paper-button>
